--- a/styles/globals.css
+++ b/styles/globals.css
@@ -35,3 +35,10 @@ footer {
   color: #777;
   border-top: 1px solid #eaeaea;
 }
+.notFound {
+  text-align: center;
+}
+.notFound a{
+  color: #4979ff;
+  text-decoration: underline;
+}
