--- a/styles/Girls.module.css
+++ b/styles/Girls.module.css
@@ -6,6 +6,6 @@
     border-left: 8px solid #fff;
   }
   .single:hover {
-    border-left: 8px solid #4979ff;
+    border-left: 8px solid #8dd7f7;
     cursor: pointer;
   }
