--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,12 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700&display=swap");
 
 body {
-  background: #f2f2f2;
-  color: #333;
+  background: #fff8f9;
+  color: #72446e;
   font-family: "Nunito";
 }
 a {
-  color: #333;
+  color: #72446e;
   text-decoration: none;
 }
 .content {
@@ -32,13 +32,13 @@ footer {
   text-align: center;
   padding: 30px 0;
   margin-top: 60px;
-  color: #777;
+  color: #a390be;
   border-top: 1px solid #eaeaea;
 }
 .notFound {
   text-align: center;
 }
 .notFound a{
-  color: #4979ff;
+  color: #8dd7f7;
   text-decoration: underline;
 }
